# my_python

.ipynb_checkpoints/: print_format_test-checkpoint.ipynb
.spyproject/: workspace.ini
.spyproject/config/: workspace.ini
auto_job_python/: exceil1.py  file_line.py  kuku.xlsx
auto_job_python/koga/: nyutaishutu.txt  susiki.py  susiki.xlsx  wareki.xlsx  warekilist.py
chatgpt_langchain/chapter03/: my0305_1.py  openai_test_japanese.py
dokushu_python/: unpack2.py
dokushu_python/.spyproject/: workspace.ini
dokushu_python/functions/: higher_order_function1.py  recursive_function1.py
dokushu_python/inadumi/: init_use.py
harulesson_kawakubo/: create_all_tables.py  create_dates.py  create_table.py  get_connect.py  insert_all_tables.py  insert_students.py  reset.py  tables.py
harulesson_yokochi/: connect_test.py
kiso_python/: iris.py
my_kivy/: button_test.py
netshop_issac/code/netshop_proj/: pyproject.toml
netshop_issac/code/netshop_proj/src/netshop/: __init__.py  cli.py  customer.py  invoice.py  product.py
oop-notebooks/: menu.py  notebook.py
peptide_collector/: NormalizationView.xhtml  datasets.txt  extract_tar.py  formalize_csv.py  get_sequence.py  get_sequence2.py  get_stats_by_default_folder_files.py  get_stats_by_submitfile 20221210.py  get_stats_by_submitfile.py  get_stats_by_submitfile_20221126.py  get_stats_by_submitfile_20230114.py  get_stats_by_submitfile_20230121.py  get_tars.py  glob_test.py  load_data.py  sequence_without_kr.txt  タンパク質定量値Excelデータ-編集後.xlsx  タンパク質定量値Excelデータ.xlsx
python_textbook/: .spyderworkspace  try-bmi.py
(+3652 files in other folders)
